# chell

./: .gitignore  CMakeLists.txt  README.md  config.build.cpp  config.h.in  main.cpp  wish_debug
include/: command.hpp  decoder.hpp  path.hpp  wish.hpp
include/builtin/: builtin.hpp  cd.hpp  command.hpp  exit.hpp  interface.hpp
scripts/: tryexec.cpp
src/: command.cpp  common.cpp  decoder.cpp  path.cpp  wish.cpp
src/builtin/: builtin.cpp  cd.cpp  command.cpp  exit.cpp  interface.cpp
tests/: config.test.cpp  test_batch.cpp  test_batch_cmd.in  test_decoder.cpp  test_wish
tests/TestBatchMode/: test_batch.cpp
